--- a/install/nav_in_lab/share/nav_in_lab/package.xml
+++ b/install/nav_in_lab/share/nav_in_lab/package.xml
@@ -8,8 +8,8 @@
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
-  <depend>geometry_msgs</depend>
-  <depend>turtlebot4_ignition_bringup </depend>
+  <depend>sensor_msgs_msgs</depend>
+  <depend>turtlebot3_gazebo </depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
