--- a/src/nav_in_lab/package.xml
+++ b/src/nav_in_lab/package.xml
@@ -10,6 +10,7 @@
   <depend>rclpy</depend>
   <depend>sensor_msgs_msgs</depend>
   <depend>turtlebot3_gazebo </depend>
+  <depend>geometry_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
