--- a/src/nav_in_lab/package.xml
+++ b/src/nav_in_lab/package.xml
@@ -11,6 +11,7 @@
   <depend>sensor_msgs_msgs</depend>
   <depend>turtlebot3_gazebo </depend>
   <depend>geometry_msgs</depend>
+  <depend>time</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
